tests/NormalTests/paczka1/fuzzy1/81425846.err
Error in line 28: A818 A818 92,40
Error in line 27: JpdjebX A648 97,7
